--- a/sass/base/_card-set.scss
+++ b/sass/base/_card-set.scss
@@ -1,6 +1,17 @@
 @media screen and (max-width: 480px) {
     .card-set {
         display: block;
-    }
-    
+    }    
+}
+@media screen and (min-width: 481px) {
+    .card-set {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -30px;
+        margin-bottom: -30px;
+        &__item {            
+            margin-left: 30px;
+            margin-bottom: 30px;
+        } 
+    } 
 }
