--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -9,7 +9,11 @@
         max-width: 480px;
     }    
 }
-
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+}
 
 
 
