--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -12,12 +12,17 @@
         color: $logo-white;
     }
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 769px) and (max-width: 1600px) {
+    .logo {
+        font-size: 26px;
+    }
+}
+@media screen and (max-width: 768px) {
     .logo {
         font-weight: 700;
         font-size: 24px;
         line-height: 1.1666;
-        display: block;
+        display: flex;
         
     }
 }
