--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,12 @@
 @media screen and (max-width: 480px) {
     .header {
-        border-bottom: 1px solid $header-border-color;
+        
         &__container {
             padding-top: 10px;
             padding-bottom: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
         }
         &__pages-list {
             display: none;
@@ -29,5 +32,103 @@
         right: 0;
     }
 }
-
+@media screen and (min-width: 481px) and (max-width: 1600px) {
+    .header {
+        border-bottom: 1px solid $header-border-color;
+        &__container, &__nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        &__pages-list {
+            display: flex;
+            width: 294px;
+            justify-content: space-between;
+            // max-margin-left: 88px;
+        }
+        &__pages-item {
+            justify-content: space-between;
+        }
+       
+        &__pages-link {
+            color: $header-text-color;
+            padding-top: 32px;
+            padding-bottom: 32px;
+            position: relative;
+            display: block;
+        }
+        &__pages-link--active {
+            color: $secondary-text-color;
+            &::after {
+                position: absolute;
+                display: block;
+                bottom: -1px;
+                content: "";
+                width: 100%;
+                height: 4px;
+                border-radius: 2px;
+                background-color: $secondary-text-color;
+            }
+        }
+        &__contacts-link {
+            display: flex;
+            align-items: center;
+        }
+        &__contacts-icon {
+            margin-right: 10px;
+            fill: currentColor;
+        }
+        .burger__button-menu {
+            display: none;
+        }
+    }
+}
+        
+    
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .header {
+        &__pages-list {
+            justify-content: space-between;
+        }
+        &__pages-link,
+        &__contacts-link {
+            font-weight: 500;
+            line-height: 1.14;
+            letter-spacing: 0.02em;
+            transition: color $transition-time $cubic;
+            &:hover, &:focus {
+                color: $secondary-text-color;
+            }
+        }
+        &__contacts-link {
+            font-size: 12px;
+            
+            // margin-left: auto;
+        }
+        &__contacts-item {
+            margin-bottom: 10px;
+        }
+        &__contacts-item:last-child {
+            margin-bottom: 0;
+        }
+    }
+}
+@media screen and (min-width: 769px) {
+    .header {
+        &__contacts-list {
+            display: flex;
+            margin-left: auto;
+        }
+        &__contacts-item {
+            margin-right: 30px;
+        }
+        &__contacts-item:last-child {
+            margin-right: 0;
+        }
+        &__nav {
+            margin-left: 93px;
+        }
+    }
+    
+}
 
