--- a/css/main.css
+++ b/css/main.css
@@ -173,22 +173,87 @@ body {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
-  .header__pages-list {
-    display: none;
-  }
-  .header__contacts-list {
-    display: none;
+  .header__mobile-menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #FFFFFF;
+    padding: 48px 40px;
   }
   .header__nav {
+    margin-bottom: 302px;
+  }
+  .header__pages-item {
+    margin-bottom: 30px;
+  }
+  .header__pages-item:last-child {
+    margin-bottom: 0;
+  }
+  .header__contacts-icon {
+    display: none;
+  }
+  .header__pages-list {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.175;
+    letter-spacing: 0.02em;
+  }
+  .header__pages-link {
+    color: #212121;
+  }
+  .header__contacts-item {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.176;
+    letter-spacing: 0.02em;
+  }
+  .header__contacts-list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 64px;
+  }
+  .header__contacts-top {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    margin-bottom: 32px;
+  }
+  .header__contacts-bottom {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.166;
+    letter-spacing: 0.02em;
+  }
+  .header__social-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: -10px;
+  }
+  .header__social-item {
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .header__social-item:last-child {
+    border: none;
+  }
+  .header__social-link {
+    color: #2196F3;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .header__social-item:first-child {
+    padding-left: 0;
   }
 
   .burger__button-menu {
@@ -207,6 +272,17 @@ body {
 @media screen and (min-width: 481px) and (max-width: 1600px) {
   .header {
     border-bottom: 1px solid #ECECEC;
+  }
+  .header__social-list {
+    display: none;
+  }
+  .header__mobile-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .header__container, .header__nav {
     display: -webkit-box;
