--- a/css/main.css
+++ b/css/main.css
@@ -159,6 +159,14 @@ body {
     background-color: rgba(255, 255, 255, 0.1);
   }
 }
+.header__pages-link, .header__contacts-link {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header__pages-link:hover, .header__pages-link:focus, .header__contacts-link:hover, .header__contacts-link:focus {
+  color: #2196F3;
+}
+
 @media screen and (max-width: 480px) {
   .header__container {
     padding-top: 10px;
@@ -174,6 +182,7 @@ body {
             justify-content: space-between;
   }
   .header__mobile-menu {
+    display: none;
     position: absolute;
     top: 0;
     left: 0;
@@ -181,6 +190,9 @@ body {
     height: 100vh;
     background-color: #FFFFFF;
     padding: 48px 40px;
+  }
+  .header__mobile-menu.is-open {
+    display: block;
   }
   .header__nav {
     margin-bottom: 302px;
@@ -267,6 +279,18 @@ body {
     position: absolute;
     top: 0;
     right: 0;
+  }
+
+  .burger__close {
+    display: none;
+  }
+
+  .menu-button.is-open .burger__close {
+    display: block;
+  }
+
+  .menu-button.is-open .burger__menu {
+    display: none;
   }
 }
 @media screen and (min-width: 481px) and (max-width: 1600px) {
