--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -26,9 +26,12 @@
         
         &__logo {
             margin-bottom: 20px;
+            justify-content: center;
+            
         }
         &-address {
             font-style: inherit;
+            
         }
         &-address__list {
             margin-bottom: 60px;
