--- a/css/main.css
+++ b/css/main.css
@@ -159,6 +159,9 @@ body {
     background-color: rgba(255, 255, 255, 0.1);
   }
 }
+.header {
+  border-bottom: 1px solid #ECECEC;
+}
 .header__pages-link, .header__contacts-link {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -190,6 +193,7 @@ body {
     height: 100vh;
     background-color: #FFFFFF;
     padding: 48px 40px;
+    z-index: 1;
   }
   .header__mobile-menu.is-open {
     display: block;
@@ -214,6 +218,9 @@ body {
   }
   .header__pages-link {
     color: #212121;
+  }
+  .header__pages-link--active {
+    color: #2196F3;
   }
   .header__contacts-item {
     font-weight: 500;
@@ -242,6 +249,7 @@ body {
     font-size: 24px;
     line-height: 1.166;
     letter-spacing: 0.02em;
+    z-index: 9;
   }
   .header__social-list {
     display: -webkit-box;
@@ -273,6 +281,7 @@ body {
     border: none;
     background-color: transparent;
     padding: 0;
+    z-index: 2;
   }
 
   .burger__close-icon {
@@ -294,9 +303,6 @@ body {
   }
 }
 @media screen and (min-width: 481px) and (max-width: 1600px) {
-  .header {
-    border-bottom: 1px solid #ECECEC;
-  }
   .header__social-list {
     display: none;
   }
@@ -739,6 +745,9 @@ body {
   }
   .footer__logo {
     margin-bottom: 20px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .footer-address {
     font-style: inherit;
