--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -216,8 +216,7 @@
             justify-content: space-between;
         }
         &__contacts-list {
-            position: relative;
-            right: 0;
+            margin-left: 84px;
         }
    
         &__contacts-link {
