--- a/sass/base/_card-set.scss
+++ b/sass/base/_card-set.scss
@@ -8,10 +8,10 @@
         display: flex;
         flex-wrap: wrap;
         margin-left: -30px;
-        margin-bottom: -30px;
+        margin-top: -30px;
         &__item {            
             margin-left: 30px;
-            margin-bottom: 30px;
+            margin-top: 30px;
         } 
     } 
 }
