--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,41 +3,61 @@
     padding-top: 60px;
     padding-bottom: 60px;
     &-join__text,
-        &-subscribe__text {
-            font-weight: 700;
-            font-size: 14px;
-            line-height: 1.14;
-            text-transform: uppercase;
-            color: $logo-white;
-            margin-bottom: 20px;
-            display: inline-block;
-        }
+    &-subscribe__text {
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        text-transform: uppercase;
+        color: $logo-white;
+        margin-bottom: 20px;
+        display: inline-block;
+    }
+    &-address {
+        font-style: inherit;
+    }
+    &-subscribe__icon {
+        fill: $logo-white;
+        margin-left: 10px;
+    }
 }
+
+
+
+
 @media screen and (max-width: 480px) {
     .footer {
-        text-align: center;
-        &-subscribe__form {
+        &-address__item:not(:last-child) {
+            margin-bottom: 9px;
+        }
+        &-join__container {
+            max-width: 100%;
+            margin-bottom: 60px;
             display: flex;
             flex-direction: column;
-            max-width: 480px;
+            align-items: center;
         }
-        
-        
-        
+        &-subscribe__form {
+            max-width: 100%;
+        }
+       
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .footer {
+        text-align: center;
         &__logo {
             margin-bottom: 20px;
             justify-content: center;
-            
         }
-        &-address {
-            font-style: inherit;
-            
+        &-subscribe__input {
+            display: block;
+           
+            height: 50px;
+            margin-bottom: 20px;
         }
         &-address__list {
             margin-bottom: 60px;
-        }
-        &-address__item:not(:last-child) {
-            margin-bottom: 9px;
         }
         &-address__link[target="_blank"] {
             color: $logo-white;
@@ -49,24 +69,11 @@
                 color: $secondary-text-color;
             }
         }
-        &-join__container {
-            max-width: 100%;
-            margin-bottom: 60px;
+        &-subscribe__form {
             display: flex;
             flex-direction: column;
-            align-items: center;
-        }
-        
-        &-subscribe__container {
-            margin-left: auto;
         }
         &-subscribe__input {
-            display: block;
-            max-width: 480px;
-            height: 50px;
-            margin-bottom: 20px;
-            
-            
             border: 1px solid rgba(255, 255, 255, 0.3);
             filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
             border-radius: 4px;
@@ -84,10 +91,30 @@
                 color: rgba(255, 255, 255, 0.6);
             }
         }
-     
-        &-subscribe__icon {
-            fill: $logo-white;
-            margin-left: 10px;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .footer {
+        &__container {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        &__address {
+            margin-left: 76px;
+        }
+        &-join__container {
+            margin-left: 165px;
+        }
+        &-address__item:not(:last-child) {
+            margin-bottom: 8px;
+        }
+        &-subscribe__container {
+            margin-left: auto;
+            margin-right: auto;
+        }
+        &-subscribe__input {
+            width: 450px;
         }
     }
 }
