--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,3 +1,9 @@
+.section {
+    &__title {
+        color: $header-text-color;
+        text-align: center;
+    }
+}
 @media screen and (max-width: 768px) {
     .section {
         
@@ -6,7 +12,6 @@
             font-size: 28px;
             line-height: 1.17;
             margin-bottom: 30px;
-            text-align: center;
         }
     }
 }
@@ -21,5 +26,11 @@
     .section {
         padding-top: 94px;
         padding-bottom: 94px;
+        &__title {
+            font-size: 36px;
+            line-height: 1.166;
+            margin-bottom: 50px;
+        }
     }
+    
 }
