--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -14,6 +14,11 @@
         max-width: 768px;
     }
 }
+@media screen and (min-width: 769px) {
+    .container {
+        width: 1200px;
+    }
+}
 
 
 
